# ISO18571

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TODO.md  default.py  main.py  pyproject.toml  pytest.ini  rating.py  rating_original.py  setup.py  virtual_van_frontal_collision_avoidance_qualification.md
cmake/: ISO18571CompilerOptions.cmake  ISO18571Dispatch.cmake  ISO18571Python.cmake
docs/: iso18571-dtw-backends.md  iso18571-dtw-experiment-log.md
examples/: comparison.csv  quickstart.ipynb  reference.csv
iso18571/: __init__.py  _core.pyi  optional.py  rating.py
iso18571_native/: __init__.py
iso18571_reference/: _common.py  rating_dtw_python.py  rating_dtwalign.py  rating_librosa.py
python/iso18571/: __init__.py  _core.cpp  _core.pyi  rating.py
reference/: __init__.py  _common.py  rating_dtw_python.py  rating_dtwalign.py  rating_librosa.py
src/: dispatch.cpp  engine.cpp  engine.h  engine_impl.cpp  float16.cpp  float16.h  numeric.h  types.h  validation.cpp  validation.h
src/iso18571/: _core.cpp  dispatch.cpp  dispatch.h  engine.cpp  engine.h  engine.hpp  engine_dispatch.cpp  engine_impl.hpp  engine_v1.cpp  engine_v2.cpp  engine_v3.cpp  engine_v4.cpp  engine_validation.cpp  fft.cpp  fft.h  fft.hpp  fft_dispatch.cpp  fft_v1.cpp  fft_v2.cpp  fft_v3.cpp  fft_v4.cpp  scorer.hpp  scorer_impl.hpp  scorer_v1.cpp  scorer_v2.cpp  scorer_v3.cpp  scorer_v4.cpp  validation.cpp  validation.h  validation.hpp
src/iso18571_native/: _core.cpp  dispatch.cpp  scorer.hpp  scorer_impl.hpp  simd.hpp  simd_avx2.cpp  simd_avx2_fma.cpp  simd_scalar.cpp  simd_sse2.cpp
tests/: __init__.py  conftest.py  iso18571_annex.py  iso18571_benchmark_data.py  iso18571_signals.py  iso18571_test_helpers.py  oracles.py  test_annex_parity.py  test_annex_tools.py  test_benchmarks.py  test_dtw_oracle.py  test_input_validation.py  test_iso18571_backends.py  test_iso18571_benchmarks.py  test_iso18571_parity.py  test_iso18571_regime_benchmarks.py  test_iso18571_robustness.py  test_iso18571_signal_benchmarks.py  test_iso18571_threshold_benchmarks.py  test_phase_oracle.py  test_pytest_policy.py  test_rating_original_parity.py  test_signal_behaviors.py  test_signal_generator.py
tools/: __init__.py  annex.py  build_wheels.py  example_data.py  signals.py
tools/iso18571/: analyze_parallel_threshold.py  analyze_variant_regimes.py  emit_native_assembly.py  report_assembly_wrinkles.py  run_backend_benchmarks.py  summarize_benchmarks.py  validate_backends.py  wheel_smoke.py
