[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "iso18571"
version = "1.0.1"
description = "ISO/TS 18571 validation tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy"]

[project.optional-dependencies]
build = ["build", "cibuildwheel"]
test = ["dtw-python", "dtwalign", "librosa", "mypy", "pytest", "pytest-benchmark", "ruff", "scipy"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.21"
wheel.packages = []

[[tool.scikit-build.overrides]]
if.env.ISO18571_CROSS_WINDOWS_TAG = "cp312-cp312-win_amd64"
wheel.tags = ["cp312-cp312-win_amd64"]

[[tool.scikit-build.overrides]]
if.env.ISO18571_CROSS_WINDOWS_TAG = "cp313-cp313-win_amd64"
wheel.tags = ["cp313-cp313-win_amd64"]

[[tool.scikit-build.overrides]]
if.env.ISO18571_CROSS_WINDOWS_TAG = "cp314-cp314-win_amd64"
wheel.tags = ["cp314-cp314-win_amd64"]

[tool.cibuildwheel]
build = "cp312-* cp313-* cp314-*"
skip = "*-musllinux_*"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "dtw",
    "dtwalign",
    "dtwalign.*",
    "librosa",
    "librosa.*",
    "scipy",
    "scipy.*",
]
ignore_missing_imports = true
