[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "iso18571"
version = "1.0.12"
description = "ISO/TS 18571 validation tooling"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["numpy"]

[project.optional-dependencies]
build = ["build", "cibuildwheel"]
examples = ["jupyter", "matplotlib"]
test = [
    "clang-format>=22.1.5",
    "dtw-python",
    "dtwalign",
    "librosa",
    "mypy",
    "pre-commit>=4.6.0",
    "pytest",
    "pytest-benchmark",
    "ruff",
    "scipy",
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.21"
sdist.exclude = ["reference", "reference/**", "tests", "tests/**", "ref", "ref/**"]
wheel.packages = []
wheel.license-files = ["LICENSE"]

[[tool.scikit-build.overrides]]
if.env.ISO18571_CROSS_WINDOWS_TAG = "cp312-cp312-win_amd64"
wheel.tags = ["cp312-cp312-win_amd64"]

[[tool.scikit-build.overrides]]
if.env.ISO18571_CROSS_WINDOWS_TAG = "cp313-cp313-win_amd64"
wheel.tags = ["cp313-cp313-win_amd64"]

[[tool.scikit-build.overrides]]
if.env.ISO18571_CROSS_WINDOWS_TAG = "cp314-cp314-win_amd64"
wheel.tags = ["cp314-cp314-win_amd64"]

[tool.cibuildwheel]
build = "cp312-* cp313-* cp314-*"
skip = "*-musllinux_*"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_34"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = ["python"]

[[tool.mypy.overrides]]
module = [
    "dtw",
    "dtwalign",
    "dtwalign.*",
    "librosa",
    "librosa.*",
    "scipy",
    "scipy.*",
]
ignore_missing_imports = true
